@@ -1,5 +1,10 @@
 2016-08-09  Natalia Portillo  <claunia@claunia.com>
 
+	* Alcohol120.cs: Missed code to return PFI and DMI from disc
+	image.
+
+2016-08-09  Natalia Portillo  <claunia@claunia.com>
+
 	* DiscImageChef.DiscImages.csproj: Bumped version to 3.2.99.2.
 
 2016-08-09  Natalia Portillo  <claunia@claunia.com>
